--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "next": "16.1.0",
+    "@gsap/react": "^2.1.2",
+    "gsap": "^3.14.2",
+    "next": "^16.1.6",
     "next-pwa": "^5.6.0",
     "react": "19.2.3",
     "react-dom": "19.2.3"
